# arm64-mcpelauncher-server

./: .gitmodules  CMakeLists.txt  README.md  server.properties
android-support-headers/: CMakeLists.txt
android-support-headers/include/android/: asset_manager.h  compat.h
arg-parser/include/argparser/: arg.h  arg_list.h  arg_parser.h
file-util/: CMakeLists.txt
file-util/include/: FileUtil.h
file-util/src/: FileUtil.cpp
libc-shim/: CMakeLists.txt
libc-shim/include/: libc_shim.h
libc-shim/src/: argrewrite.h  common.cpp  common.h  cstdio.cpp  cstdio.h  ctype_data.cpp  ctype_data.h  dirent.cpp  dirent.h  errno.cpp  errno.h  fakesyscall.h  file_misc.cpp  file_misc.h  iorewrite.cpp  iorewrite.h  mallinfo.h  meta.h  network.cpp  network.h  pthreads.cpp  pthreads.h  sched.cpp  sched.h  semaphore.cpp  semaphore.h  stat.cpp  stat.h  statvfs.cpp  statvfs.h  sysconf.cpp  sysconf.h  system_properties.cpp  system_properties.h  variadic.h
libc-shim/src/bionic/: strlcpy.cpp
logger/: CMakeLists.txt
logger/include/: log.h
logger/src/: log.cpp
mcpelauncher-common/include/mcpelauncher/: path_helper.h
mcpelauncher-common/src/: path_helper.cpp
mcpelauncher-core/: CMakeLists.txt
mcpelauncher-core/include/mcpelauncher/: crash_handler.h  hook.h  hybris_utils.h  minecraft_utils.h  minecraft_version.h  mod_loader.h  patch_utils.h
mcpelauncher-core/src/: crash_handler.cpp  hook.cpp  hybris_android_log_hook.cpp  hybris_utils.cpp  minecraft_utils.cpp  minecraft_version.cpp  mod_loader.cpp  patch_utils.cpp
mcpelauncher-linker/: CMakeLists.txt  LICENSE
mcpelauncher-linker/bionic/libc/async_safe/: async_safe_log.cpp
mcpelauncher-linker/bionic/libc/bionic/: android_set_abort_message.cpp  bionic_allocator.cpp  bionic_systrace.cpp  pthread_create.cpp  stdlib_l.cpp
mcpelauncher-linker/bionic/libc/include/: assert.h
mcpelauncher-linker/bionic/libc/include/android/: dlext.h
mcpelauncher-linker/bionic/libc/platform/bionic/: page.h
mcpelauncher-linker/bionic/libc/stdlib/: atexit.c
mcpelauncher-linker/bionic/libc/system_properties/: contexts_serialized.cpp
mcpelauncher-linker/bionic/libdl/: libdl.cpp
mcpelauncher-linker/bionic/linker/: dlfcn.cpp  linker.cpp  linker_block_allocator.cpp  linker_cfi.cpp  linker_config.cpp  linker_logger.cpp  linker_logger.h  linker_main.cpp  linker_mapped_file_fragment.cpp  linker_namespaces.cpp  linker_phdr.cpp  linker_phdr.h  linker_relocate.cpp  linker_sdk_versions.cpp  linker_soinfo.cpp  linker_soinfo.h  linker_tls.h  linker_utils.cpp
mcpelauncher-linker/core/base/: file.cpp  threads.cpp
mcpelauncher-linker/core/liblog/: logger_write.cpp
mcpelauncher-linker/core/libziparchive/: zip_archive.cc
mcpelauncher-linker/include/: android  assert.h  async_safe  compat.h  elf.h  link.h  platform  private  property_info_parser  system_properties  ziparchive
mcpelauncher-linker/include/bits/: elf_arm.h  elf_arm64.h  elf_mips.h  elf_x86.h  elf_x86_64.h
mcpelauncher-linker/include/linux/: elf-em.h  elf.h  types.h
mcpelauncher-linker/include/sys/: _system_properties.h  auxv.h  cdefs.h  ifunc.h  prctl.h  system_properties.h
mcpelauncher-linker/public_include/mcpelauncher/: linker.h
mcpelauncher-linker/src/: linker.cpp  zip_archive_stream_entry.cc
mcpelauncher-server/: CMakeLists.txt
mcpelauncher-server/src/: console_reader.cpp  console_reader.h  main.cpp  main.h  stubs.cpp  stubs.h
minecraft-imported-symbols/include/minecraft/imported/: android_symbols.h  egl_symbols.h  fmod_symbols.h  glesv2_symbols.h  libm_symbols.h  libz_symbols.h
properties-parser/include/properties/: property_list.h
